# libmcv

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
docs/: Makefile  index.rst
examples/: Makefile  build.sh  loadImage  loadImage.cpp
examples/mnist/: LeNet-model  build.sh  train  train.cpp
lib/libjpeg-turbo/: .gitignore  aclocal.m4  configure  jpeglib.h
lib/libjpeg-turbo/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lib/libjpeg-turbo/java/: Makefile.in
scripts/: build_libjpeg.sh
src/modules/Image/: CMakeLists.txt  Image.cpp  Image.h
src/modules/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/modules/ML/: CMakeLists.txt  Classifier.cpp  Classifier.h  Common.cpp  Common.h
