cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++17)
aux_source_directory(. DIR_IMAGE_SRCS)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
ADD_LIBRARY(mcvImage SHARED ${DIR_IMAGE_SRCS})
execute_process(COMMAND ${PROJECT_SOURCE_DIR}/scripts/build_libjpeg.sh)
FIND_LIBRARY(LIBJPEG libjpeg.so ${PROJECT_SOURCE_DIR}/lib/libjpeg-turbo/build/.libs)
IF(LIBJPEG)
    TARGET_LINK_LIBRARIES(mcvImage ${LIBJPEG})
ELSE()
    MESSAGE(STATUS "libjpeg-turbo not built yet.")
    TARGET_LINK_LIBRARIES(mcvImage ${LIBJPEG})
ENDIF()
MESSAGE("Image CMake Completed")