cmake_minimum_required(VERSION 3.1)
add_definitions(-std=c++17)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
aux_source_directory(. DIR_LOGGER_SRCS)
ADD_LIBRARY(mcvLogger SHARED ${DIR_LOGGER_SRCS})
SET(mcvLogger ${PROJECT_SOURCE_DIR}/src/modules/Logger/Logger.cpp)
TARGET_LINK_LIBRARIES(mcvLogger Threads::Threads)
MESSAGE("Logger CMake Completed")