cmake_minimum_required(VERSION 3.1)
add_definitions(-std=c++14)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
INCLUDE_DIRECTORIES(../../../lib)
aux_source_directory(. DIR_ML_SRCS)
ADD_LIBRARY(mcvML SHARED ${DIR_ML_SRCS})
MESSAGE("ML CMake Completed")